--- a/HPC_lab1/HPC_lab1.vcxproj
+++ b/HPC_lab1/HPC_lab1.vcxproj
@@ -129,9 +129,11 @@
   <ItemGroup>
     <ClCompile Include="HPC_lab1.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
