Random matrix and vector data initialization

--- a/HPC_lab1/HPC_lab1.vcxproj
+++ b/HPC_lab1/HPC_lab1.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HPC.cpp" />
     <ClCompile Include="HPC_lab1.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HPC.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
