--- a/HPC_lab1/HPC_lab1.vcxproj.filters
+++ b/HPC_lab1/HPC_lab1.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Vector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HPC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HPC.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
